@@ -37,6 +37,7 @@
 #include "machine.h"
 #include "memory.h"
 #include "module.h"
+#include "periph.h"
 #include "scld.h"
 #include "spectrum.h"
 #include "ui/ui.h"
@@ -63,15 +64,25 @@ static module_info_t scld_module_info = {
 
 };
 
+static libspectrum_byte scld_dec_read( libspectrum_word port, int *attached );
+static libspectrum_byte scld_hsr_read( libspectrum_word port, int *attached );
+
+static const periph_t scld_peripherals[] = {
+  { 0x00ff, 0x00f4, scld_hsr_read, scld_hsr_write },
+  { 0x00ff, 0x00ff, scld_dec_read, scld_dec_write },
+  { 0, 0, NULL, NULL }
+};
+
 int
 scld_init( void )
 {
   module_register( &scld_module_info );
+  periph_register_type( PERIPH_TYPE_SCLD, NULL, scld_peripherals );
 
   return 0;
 }
 
-libspectrum_byte
+static libspectrum_byte
 scld_dec_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
   *attached = 1;
@@ -129,7 +140,7 @@ scld_hsr_write( libspectrum_word port GCC_UNUSED, libspectrum_byte b )
   machine_current->memory_map();
 }
 
-libspectrum_byte
+static libspectrum_byte
 scld_hsr_read( libspectrum_word port GCC_UNUSED, int *attached )
 {
   *attached = 1;
