@@ -3439,3 +3439,5 @@
          spec48.c,spec48_ntsc.c,specplus2a.c,specplus3.c,spec_se.c,tc2048.c,
          tc2068.c},periph.h,printer.[ch]: use new peripheral framework for the
          ZX Printer and 128K AY chip.
+20110120 machines/{spec_se.c,tc2048.c,tc2068.c},periph.h,scld.[ch]: use new
+         peripheral framework for SCLD.
